RESOLVED FIXED196297
[GTK][WPE] Fix seccomp rule for blacklisting TIOCSTI
https://bugs.webkit.org/show_bug.cgi?id=196297
Summary [GTK][WPE] Fix seccomp rule for blacklisting TIOCSTI
Patrick Griffis
Reported 2019-03-27 08:28:42 PDT
[GTK][WPE] Fix seccomp rule for blacklisting TIOCSTI
Attachments
Patch (1.74 KB, patch)
2019-03-27 08:29 PDT, Patrick Griffis
no flags
Patrick Griffis
Comment 1 2019-03-27 08:29:36 PDT
Michael Catanzaro
Comment 2 2019-04-01 05:36:23 PDT
Shame Alex doesn't want to share this code; it's not the first time we'll have to fix security bugs in three different places.
WebKit Commit Bot
Comment 3 2019-04-01 06:02:44 PDT
Comment on attachment 366071 [details] Patch Clearing flags on attachment: 366071 Committed r243692: <https://trac.webkit.org/changeset/243692>
WebKit Commit Bot
Comment 4 2019-04-01 06:02:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.