[GTK][WPE] Fix seccomp rule for blacklisting TIOCSTI https://bugs.webkit.org/show_bug.cgi?id=196297

Patch by Patrick Griffis <pgriffis@igalia.com> on 2019-04-01
Reviewed by Michael Catanzaro.

More information can be found here: https://www.exploit-db.com/exploits/46594

Note that this sandbox never made it into production so does not
warrant any CVE specific to WebKit.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::setupSeccomp):

Canonical link: https://commits.webkit.org/210708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243692 268f45cc-cd09-0410-ab3c-d52691b4dbfc